# example_cmake

./: .gitignore  README.md
SCS_BRO/: test.sh
SCS_BRO/include/: apicommon.h
SCS_BRO/src/: test.cpp
SCS_BRO/tools/: CMakeLists.txt
scs_bro/: CMakeLists.txt
scs_bro/include/: Parallelizer.hpp  check_data.h  compiler.h  timehelper.h
scs_bro/src/: CMakeLists.txt
scs_bro/tools/: CImg.h  CMakeLists.txt  img2bin.cpp  readbin2console.cpp  readtxt2console.cpp  tools.hpp
